# underwater-laser-net

./: README.md  rate_vs_distance.csv
docs/: architecture.md
env/: environment.yaml
foam/0/: U  k  nut  omega  p  turbidity
foam/0.1/: U  U_0  k  k_0  nut  omega  omega_0  p  phi  phi_0  turbidity  turbidity_0
foam/0.2/: U  U_0  k  k_0  nut  omega  omega_0  p  phi  phi_0  turbidity  turbidity_0
foam/0.3/: U  U_0  k  k_0  nut  omega  omega_0  p  phi  phi_0  turbidity  turbidity_0
foam/0.4/: U  U_0  k  k_0  nut  omega  omega_0  p  phi  phi_0  turbidity  turbidity_0
foam/0.5/: U  U_0  k  k_0  nut  omega  omega_0  p  phi  phi_0  turbidity  turbidity_0
foam/0.6/: U  U_0  k  k_0  nut  omega  omega_0  p  phi  phi_0  turbidity  turbidity_0
foam/0.7/: U  U_0  k  k_0  nut  omega  omega_0  p  phi  phi_0  turbidity  turbidity_0
foam/0.8/: U  U_0  k  k_0  nut  omega  omega_0  p  phi  phi_0  turbidity  turbidity_0
foam/0.9/: U  U_0  k  k_0  nut  omega  omega_0  p  phi  phi_0  turbidity  turbidity_0
foam/1.1/: U  U_0  k  k_0  nut  omega  omega_0  p  phi  phi_0  turbidity  turbidity_0
foam/1.2/: U  U_0  k  k_0  nut  omega  omega_0  p  phi  phi_0  turbidity  turbidity_0
foam/1.3/: U  U_0  k  k_0  nut  omega  omega_0  p  phi  phi_0  turbidity  turbidity_0
foam/1.4/: U  U_0  k  k_0  nut  omega  omega_0  p  phi  phi_0  turbidity  turbidity_0
foam/1.5/: U  U_0  k  k_0  nut  omega  omega_0  p  phi  phi_0  turbidity  turbidity_0
foam/1.6/: U  U_0  k  k_0  nut  omega  omega_0  p  phi  phi_0  turbidity  turbidity_0
foam/1.7/: U  U_0  k  k_0  nut  omega  omega_0  p  phi  phi_0  turbidity  turbidity_0
foam/1.8/: U  U_0  k  k_0  nut  omega  omega_0  p  phi  phi_0  turbidity  (+1 more)
meep/: channel_params.json
ml/: predict_flux.py  prepare_training_data.py  train_predictor.py  training.csv
modulation/: generate_ber.py  per_snr.csv  per_snr.py  rate_vs_distance.csv  rate_vs_distance.py  rate_vs_distance_10Mbps.csv  rate_vs_distance_20Mbps.csv  rate_vs_distance_30Mbps.csv  rate_vs_distance_40Mbps.csv  rate_vs_distance_50Mbps.csv
ns3/: CMakeLists.txt  trace_parser.py
ns3/scratch/: CMakeLists.txt  alpha_depth_time.csv  laser_mesh.cc  ml-link-metric.cc  ml-link-metric.h  per_snr_table.csv  throughput-tracer.cc  throughput-tracer.h  underwater_laser.cc  underwater_laser_error_model.h
ns3/scratch/python/: flux_predictor.py
(+1166 files in other folders)
